# taxi_microservices

./: Dockerfile  README.md  Taxi service.md  docker-compose.prod.yml  docker-compose.staging.yml  pyproject.toml  Работа с заданием.md
Taxi-service-main/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Taxi-service-main/docs/: TESTING_GUIDE.md  plan.md
Taxi-service-main/nginx/: Dockerfile  nginx.conf
Taxi-service-main/scripts/: load_test.py  quick_test.sh  startup.sh  test_auth.py  test_endpoints.py
Taxi-service-main/src/: main.py  run_matching_service.py
Taxi-service-main/src/api/v1/: auth.py  dependencies.py  drivers.py  notifications.py  rides.py
Taxi-service-main/src/core/: config.py  db.py  logging_config.py  redis.py
Taxi-service-main/src/models/: driver.py  passenger.py  ride.py  user.py
Taxi-service-main/src/schemas/: driver.py  ride.py  user.py
Taxi-service-main/src/services/: driver_profile_service.py  matching_service.py  notification_service.py  pricing_service.py  redis_publisher.py  rides_service.py  user_service.py
Taxi-service-main/taxi-frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
Taxi-service-main/taxi-frontend/src/: App.tsx  main.tsx
Taxi-service-main/taxi-frontend/src/api/: client.ts  websocket.ts
Taxi-service-main/taxi-frontend/src/components/: GridMap.tsx  OrderProposalModal.tsx
Taxi-service-main/taxi-frontend/src/context/: AppContext.tsx
Taxi-service-main/taxi-frontend/src/hooks/: useWebSocket.ts
Taxi-service-main/tests/services/: test_driver_profile_service.py
nginx/: nginx.conf
(+89 files in other folders)
